theraGENOME/k8s/04-tls-certificate-issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
